--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,91 @@
-telethon
-setuptools
-wheel
-aiofiles
-aiohttp
-beautifulsoup4
+Pillow
+google-trans-new
+nospamplus
+img2pdf
+pymediainfo
+tinydb
+spotdl
+apscheduler
+youtube_dl
+git+https://github.com/chsaiujwal/maigret
+git+https://github.com/gleitz/howdoi
+pyseoanalyzer
+fake_useragent
+rotten_tomatoes_client
+pygifsicle
+pokedex.py
+faker
+tracemoepy
+deep_translator
+countryinfo
+mal-api
+emoji-country-flag
+langdetect
+PyProxyToolkit
 cairosvg
-cfscrape
-coffeehouse
-colour
-covid
-cowpy
-cryptg
-csvfaker
-DateTime
+grapheme
+cryptosteganography
+QScintilla
+requests_html
+yahoo_fin
+anime_downloader
+pandas
 fontTools
-python-dotenv
-emoji
-fonttools
+quote
+lottie
+textblob
+python-magic
+glitch_this
+PyGithub
+pytesseract
+opencv-contrib-python
+Telethon==1.21.1
+iplookup
+wget
+numpy
+pyshorteners
+aiohttp
+bs4
+coffeehouse
+cowpy
+emoji==0.6.0
+gTTS-token>=1.1.3
+gTTS>=2.0.1
 geopy
 gitpython
-glitch_this
-google-api-python-client
-google-auth-httplib2
+google-api-python-client==1.8.0
 google-auth-oauthlib
-googletrans==4.0.0-rc1
 gsearch
-gtts
 hachoir
 heroku3
-html-telegraph-poster
+httplib2
 humanize
-jotquote
-justwatch
-kwot
-lottie
 lxml
 lyricsgenius
-nekos.py
-patool
-Pillow
-prettytable
-programmingquotes
-psutil
-psycopg2
-PyDictionary
-pyfiglet
-PyGithub
-pygments
-pylast
+oauth2client
+psycopg2-binary
 PyLyrics
-pymediainfo
 pySmartDL
+pybase64>=0.4.0
+pyfiglet
+pylast
 python-barcode
-pytuneteller
+python-dotenv
 pytz
 qrcode
 regex
 requests
 search-engine-parser
 selenium
-spamwatch
-speedtest-cli
-sqlalchemy
+speedtest-cli>=2.0.2
+sqlalchemy==1.3.23
 telegraph
 tswift
-validators
-vcsi
-wand
-wikipedia
-youtube_dl
-youtube-search-python
-google_trans_new
+urbandict>=0.5
+wikipedia>=1.4.0
+youtube-search
+password_strength
+pyjokes
+cryptocompare==0.7.3
+googletrans
+pdf2docx
