--- a/requirements.txt
+++ b/requirements.txt
@@ -1,91 +1,67 @@
-Pillow
-google-trans-new
-nospamplus
-img2pdf
-pymediainfo
-tinydb
-spotdl
-apscheduler
-youtube_dl
-git+https://github.com/chsaiujwal/maigret
-git+https://github.com/gleitz/howdoi
-pyseoanalyzer
-fake_useragent
-rotten_tomatoes_client
-pygifsicle
-pokedex.py
-faker
-tracemoepy
-deep_translator
-countryinfo
-mal-api
-emoji-country-flag
-langdetect
-PyProxyToolkit
-cairosvg
-grapheme
-cryptosteganography
-QScintilla
-requests_html
-yahoo_fin
-anime_downloader
-pandas
-fontTools
-quote
-lottie
-textblob
-python-magic
-glitch_this
+telethon==1.21.1
+Pillow>=5.3.0    
 PyGithub
-pytesseract
-opencv-python-headless==4.5.1.48
-Telethon==1.21.1
-iplookup
-wget
-numpy
-pyshorteners
+pymediainfo
+aiofiles
 aiohttp
+aria2p
+async_generator
+pygments
+beautifulsoup4
+fontTools
 bs4
+bwb==3.0.0
+cfscrape
 coffeehouse
 cowpy
-emoji==0.6.0
+cryptg
+dnspython
+emoji
 gTTS-token>=1.1.3
 gTTS>=2.0.1
-geopy
 gitpython
+glitch_this
 google-api-python-client==1.8.0
 google-auth-oauthlib
+google_images_download>=2.8.0
+googletrans==4.0.0rc1
+geopy
 gsearch
 hachoir
 heroku3
 httplib2
 humanize
+justwatch
 lxml
-lyricsgenius
 oauth2client
+patool
+psycopg2
 psycopg2-binary
 PyLyrics
-pySmartDL
 pybase64>=0.4.0
 pyfiglet
 pylast
+pymongo
 python-barcode
 python-dotenv
+python-magic
+pytube>=9.5.1
 pytz
-qrcode
 regex
-requests
-search-engine-parser
+requests>=2.18.4
+search-engine-parser>=0.4.2
 selenium
 speedtest-cli>=2.0.2
-sqlalchemy==1.3.23
+spotify_token
+sqlalchemy>=1.2
 telegraph
-tswift
 urbandict>=0.5
+validators
 wikipedia>=1.4.0
-youtube-search
-password_strength
-pyjokes
-cryptocompare==0.7.3
-googletrans
-pdf2docx
+youtube-dl
+covid
+spamwatch
+tswift
+colour
+wand
+nekos.py
