--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 Pillow>=5.3.0
-telethon==1.21.1
 PyGithub
+pygifsicle
+pyrogram>=1.1.13
+PyDictionary
+PyPDF2
+pygments
+pymediainfo
 aiofiles
+asyncurban
 aiohttp
 aria2p
 async_generator
@@ -10,30 +16,40 @@ bs4
 bwb==3.0.0
 cfscrape
 coffeehouse
+chromedriver_autoinstaller
 cowpy
 cryptg
 dnspython
 emoji
 gTTS-token>=1.1.3
+opencv-python--headless
+youtube_search
+pornhub_api
 gTTS>=2.0.1
-geopy
+opencv-python--headless
+scapy
 gitpython
 google-api-python-client==1.8.0
 google-auth-oauthlib
-google_images_download>=2.7.1
-googletrans>=2.4.0
+google_images_download>=2.8.0
+googletrans==3.1.0a0
+geopy
+glitch_this
 gsearch
 hachoir
 heroku3
 httplib2
 humanize
+justwatch
 lxml
-lyricsgenius
+lottie
+nekos.py
 oauth2client
+patool
 psycopg2
 psycopg2-binary
 PyLyrics
-PyPDF2
+pySmartDL
 pybase64>=0.4.0
 pyfiglet
 pylast
@@ -41,19 +57,30 @@ pymongo
 python-barcode
 python-dotenv
 python-magic
-pytube
+pytube>=9.5.1
 pytz
 qrcode
+pokedex.py==1.1.2
+wand
 regex
 requests>=2.18.4
 search-engine-parser>=0.4.2
+spamwatch
 selenium
 speedtest-cli>=2.0.2
-sqlalchemy>=1.2
+spotify_token
+spotdl
+sqlalchemy==1.3.23
 telegraph
-tswift
+twitter_scraper
+html-telegraph-poster
 urbandict>=0.5
+validators
 wikipedia>=1.4.0
 youtube-dl
-covid
-validators
+youtube-search-python
+tswift
+telethon==1.21.1
+faker
+google_trans_new
+LEGENDX
